--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -626,5 +626,9 @@
     <!-- ZenParts -->
      <string name="config_alternativeDeviceKeyHandlerLib" translatable="false">/system/priv-app/ZenParts/ZenParts.apk</string>
      <string name="config_alternativeDeviceKeyHandlerClass" translatable="false">com.asus.zenparts.KeyHandler</string>
+     
+    <!-- Disable battery health info and ultra power saving -->
+     <bool name="config_supportBatteryHealth">false</bool>
+     <bool name="config_supportUltraPowerSaving">false</bool>
 
 </resources>
